[package]
name = "twimetravel"
version = "0.1.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]

[dependencies]
env_logger = "0.5.4"
gotham = "0.2"
gotham_derive = "0.2"
hyper = "0.12"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0-alpha.3"
oauthcli = "1"
reqwest = "0.8.5"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1"
serde_urlencoded = "0.5.1"
time = "0.1.39"
toml = "0.4"
url = "1.6"
uuid = "0.6"
walkdir = "2.1.4"
