[package]
name = "twimetravel"
version = "0.1.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]

[dependencies]
env_logger = "0.5.4"
gotham = "0.2"
gotham_derive = "0.2"
hyper = "0.11"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.0-alpha.3"
oauthcli = { git = "https://github.com/illicitonion/rust-oauthcli.git", rev = "b898f9dc0384334c5fa0527c3ef80e94a68c1ad1" }
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1"
serde_urlencoded = "0.5.1"
time = "0.2.16"
toml = "0.4"
url = "2.1"
uuid = "0.6"
walkdir = "2.1.4"
